# voice-intel-client

./: .gitignore  AGENTS.md  Architecture.md  README.en.md  README.md  ROADMAP.md  Verlauf.txt  config.json  newfile.py  next.config.js  package-lock.json  package.json  script.py  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yaml  build.yml
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .tsbuildinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/cache/webpack/server-production/: 1.pack  (+2 more)
.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.rsc  index.html  page.js  page_client-reference-manifest.js
.next/server/chunks/: 819.js
.next/server/pages/: 500.html
.next/static/chunks/: 413.ba7ca97587540a46.js  608-69118c8757688419.js  b2db8554.2f90d90ec938bc93.js
.next/types/app/: layout.ts  page.ts
app/: layout.tsx  package.json  page.tsx  worker.ts
src-tauri/: Cargo.toml  index.ts  layout.css  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.json
src-tauri/src/: audio.rs  config.rs  llm.rs  logger.rs  main.rs  whisper.rs
(+3 files in other folders)
