[package]
name = "voice-intel-app"
version = "0.1.0"
description = "Voice Intelligence App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "voice-intel-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-app = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
hound = "3.5"
whisper-rs = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
